# grpc-demo

go/: go.mod  server.go
go/protos/: library.pb.go  library_grpc.pb.go
protos/: library.proto
python/: README.md  client.py  library.py  library_pb2.py  library_pb2_grpc.py  pyproject.toml  server.py
